added more allowed hosts

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ RABBITMQ_DEFAULT_PASS=app
 
 SECRET_KEY=uk!k#j)9+o=7=$k0o)((60g7fp56sq^im77-*5^7o28_ax7_r!
 DEBUG=True
-ALLOWED_HOSTS=0.0.0.0
+ALLOWED_HOSTS=0.0.0.0 localhost 127.0.0.1
 DB_HOST=db
 DB_PORT=5432
 BROKER_HOST=broker
