--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "=3.9.5"
 psycopg2-binary = "=2.8.6"
 Django = "=3.2.1"
 djangorestframework = "=3.12.4"
+drf-yasg = "=1.20.0"
 
 [tool.poetry.dev-dependencies]
 
